--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "inngest": "^3.40.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
@@ -37,6 +39,7 @@
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
+    "resend": "^6.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
